--- a/voy-eventmanager/pom.xml
+++ b/voy-eventmanager/pom.xml
@@ -6,13 +6,11 @@
 	<groupId>com.voy</groupId>
 	<artifactId>eventmanager</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-    <modules>
-        <module>../auth-common</module>
-    </modules>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
 
 	<name>EventManager</name>
 	<description>Gerenciardor de eventos e ingressos</description>
+
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -31,7 +29,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-eureka</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -81,6 +82,18 @@
 			</plugin>
 		</plugins>
 	</build>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-parent</artifactId>
+                <version>Angel.SR3</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 	
 
 </project>
